@@ -7,7 +7,7 @@
  * Written by Xiaotao Wu
  * Last modified: 11/03/2000
  *
- * $Id: udp_tcl.c,v 1.26 2006/03/05 10:43:11 patthoyts Exp $
+ * $Id: udp_tcl.c,v 1.27 2006/05/15 12:35:47 patthoyts Exp $
  ******************************************************************************/
 
 #if defined(_DEBUG) && !defined(DEBUG)
@@ -31,6 +31,10 @@ typedef int socklen_t;
 #error "Neither sys/ioctl.h nor sys/filio.h found. We need ioctl()"
 #endif
 #endif /* WIN32 */
+
+#if HAVE_FCNTL_H
+#  include <fcntl.h>
+#endif
 
 /* Tcl 8.4 CONST support */
 #ifndef CONST84
@@ -239,6 +243,20 @@ udpOpen(ClientData clientData, Tcl_Interp *interp,
         Tcl_AppendResult(interp, errBuf, (char *)NULL);
         return TCL_ERROR;
     } 
+
+    /*
+     * bug #1477669: avoid socket inheritence after exec
+     */
+#if HAVE_FLAG_FD_CLOEXEC
+    fcntl(sock, F_SETFD, FD_CLOEXEC);
+#else
+#ifdef WIN32
+    if (SetHandleInformation(sock, HANDLE_FLAG_INHERIT, 0) == 0) {
+      Tcl_AppendResult(interp, "failed to set close-on-exec bit", NULL);
+      return TCL_ERROR;
+    }
+#endif /* WIN32 */
+#endif /* HAVE_FLAG_FD_CLOEXEC */
 
     memset(&addr, 0, sizeof(addr));
 #ifdef SIPC_IPV6
